--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "pnpm rome check .",
+    "fix": "pnpm rome format . --write"
   },
   "dependencies": {
     "@types/node": "20.2.5",
@@ -16,5 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "rome-config-fenixui": "workspace:^"
   }
 }
