--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@fenixui-org/tsconfig": "workspace:^",
     "rome-config-fenixui": "workspace:^"
   }
 }
