--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,11 +1,34 @@
 {
   "name": "server",
-  "module": "index.ts",
+  "module": "./src/index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun dev",
+    "check": "bun run rome check .",
+    "fix": "bun run rome format . --write",
+    "test": "jest --detectOpenHandles"
+  },
+  "jest": {
+    "preset": "jest-presets/jest/node"
+  },
   "devDependencies": {
-    "bun-types": "^0.6.0"
+    "@fenixui-org/logger": "link:@fenixui-org/logger",
+    "@fenixui-org/tsconfig": "link:@fenixui-org/tsconfig",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/morgan": "^1.9.4",
+    "body-parser": "^1.20.2",
+    "bun-types": "^0.6.0",
+    "cors": "^2.8.5",
+    "jest": "^29.5.0",
+    "morgan": "^1.10.0",
+    "supertest": "^6.3.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
