configured workspace through pnpm and also through bun

--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "nebulite",
-  "workspaces": ["packages/*"],
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "bun-types": "^0.6.0"
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ]
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "scripts": {
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "lint": "turbo run check",
+    "lint:fix": "turbo run fix"
+  },
+  "packageManager": "pnpm@8.6.0",
+  "devDependencies": {
+    "rome": "^12.1.3",
+    "turbo": "^1.10.1"
   }
 }
