--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,10 +3,12 @@
   "module": "./src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun dev",
-    "check": "bun rome check .",
-    "fix": "bun rome format . --write",
-    "test": "jest --detectOpenHandles"
+    "check": "bun run rome check .",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "dev": "bun run ./src/index.ts",
+    "fix": "bun run rome format . --write",
+    "jest:test": "jest --detectOpenHandles",
+    "test": "bun test"
   },
   "jest": {
     "preset": "jest-presets/jest/node"
@@ -14,10 +16,12 @@
   "devDependencies": {
     "@fenixui-org/logger": "link:@fenixui-org/logger",
     "@fenixui-org/tsconfig": "link:@fenixui-org/tsconfig",
+    "jest-presets": "link:jest-presets",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "body-parser": "^1.20.2",
     "bun-types": "^0.6.0",
     "cors": "^2.8.5",
